# agentic-rpg

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  PRD.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py
backend/scripts/: export_openapi.py
backend/src/agentic_rpg/: config.py  db.py  main.py
backend/src/agentic_rpg/agent/: context.py  graph.py  prompt.py  story_engine.py
backend/src/agentic_rpg/agents/tools/: base.py  registry.py
backend/src/agentic_rpg/api/: dependencies.py  handlers.py  middleware.py  routes.py  websocket.py
backend/src/agentic_rpg/events/: bus.py  persistence.py  schemas.py
backend/src/agentic_rpg/llm/: client.py
backend/src/agentic_rpg/models/: __init__.py  api.py  character.py  conversation.py  events.py  game_state.py  inventory.py  responses.py  story.py  versioning.py  world.py
backend/src/agentic_rpg/services/: event_bus.py  interfaces.py  mock_state_manager.py
backend/src/agentic_rpg/state/: manager.py
backend/src/agentic_rpg/tools/: character.py  inventory.py  narrative.py  registry.py  world.py
backend/tests/: conftest.py
backend/tests/test_agent/: test_context.py  test_graph.py  test_prompt.py  test_story_engine.py
backend/tests/test_api/: conftest.py  test_dependencies_unit.py  test_fixtures_smoke.py  test_game_state.py  test_handlers_unit.py  test_health.py  test_middleware_unit.py  test_sessions.py  test_websocket.py  test_wiring.py
backend/tests/test_events/: test_bus.py  test_persistence.py  test_schemas.py
backend/tests/test_llm/: test_client.py
backend/tests/test_models/: test_schemas.py
backend/tests/test_state/: test_manager.py
backend/tests/test_tools/: conftest.py  test_character.py  test_inventory.py  test_narrative.py  test_registry.py  test_world.py
backend/tests/unit/: test_config.py
backend/tests/unit/test_models/: test_character.py  test_conversation.py  test_game_state.py  test_inventory.py  test_responses.py  test_versioning.py  test_world.py
backend/tests/unit/test_services/: test_event_bus.py  test_mock_state_manager.py
backend/tests/unit/test_tools/: test_registry.py
docs/: README.md  prd.md  roadmap.md
docs/plans/: player-view-redaction.md  ralph-a-backend.md  ralph-b-frontend.md
docs/specs/: agent-system.md  api-layer.md  event-system.md  frontend.md  game-state.md  schema-registry.md  story-engine.md  tool-registry.md
docs/tech/: docker-kubernetes.md  go-backend.md  langchain-integration.md  llm-integration.md  nextjs-frontend.md  postgres.md  pydantic-models.md  python-backend.md  schema-codegen.md  websockets.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/__tests__/app/: home.test.tsx  layout.test.tsx  new.test.tsx  page.test.tsx  play.test.tsx
frontend/__tests__/components/: CharacterPanel.test.tsx  ChatPanel.test.tsx  InventoryPanel.test.tsx  LocationPanel.test.tsx  Sidebar.test.tsx  StoryPanel.test.tsx
frontend/__tests__/integration/: ws-store.test.tsx
frontend/__tests__/lib/: api.test.ts  player.test.ts  store.test.ts  websocket.test.ts  ws-schemas.test.ts
frontend/__tests__/types/: api.test.ts  game.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/__tests__/: layout.test.tsx  page.test.tsx
frontend/app/new/: page.tsx
frontend/app/play/[sessionId]/: page.tsx
frontend/components/: CharacterPanel.tsx  ChatPanel.tsx  InventoryPanel.tsx  LocationPanel.tsx  Sidebar.tsx  StoryPanel.tsx
frontend/lib/: api.ts  player.ts  store.ts  websocket.ts  ws-schemas.ts
frontend/scripts/: generate-types.sh
frontend/types/: api.ts  game.ts  generated.ts
thoughts/shared/plans/: 2025-11-06-initial-project-setup.md
